# FakeDB

./: CMakeLists.txt  Jenkinsfile
cmake/: FakeDBConfig.cmake.in
include/fakedb/: fakedb.h
src/: fakedb.cpp
